# aksara

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: python.yml
NamaProject/: utama.aks
docs/: bahasa.md
examples/: halo.aks
src/aksara/: __init__.py
src/aksara/ast/: __init__.py  expressions.py  statements.py
src/aksara/cli/: __init__.py  main.py
src/aksara/compiler/: __init__.py  validator.py
src/aksara/errors/: __init__.py  base.py  suggestions.py
src/aksara/interpreter/: __init__.py  interpreter.py  runner.py
src/aksara/lexer/: __init__.py  lexer.py  token.py
src/aksara/parser/: __init__.py  parser.py
src/aksara/runtime/: __init__.py  environment.py  values.py
src/aksara/stdlib/: __init__.py  core.py
tests/ast/: test_nodes.py
tests/cli/: test_main.py
tests/compiler/: test_validator.py
tests/errors/: test_errors.py
tests/interpreter/: test_runner.py
tests/lexer/: test_lexer.py
tests/parser/: test_parser.py
tests/runtime/: test_environment.py  test_values.py
tests/stdlib/: test_core.py
